samples/_failures_safe/1761004994_12f04f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc007404.c: In function ‘main’:
./samples/SAFE/__tmp_bc007404.c:180:35: error: expected ‘)’ at end of input
  180 |         if (strcmp(input, "start")
      |            ~                      ^
      |                                   )
./samples/SAFE/__tmp_bc007404.c:180:9: error: expected declaration or statement at end of input
  180 |         if (strcmp(input, "start")
      |         ^~
./samples/SAFE/__tmp_bc007404.c:180:9: error: expected declaration or statement at end of input
